<resources>
    <string name="app_name">Banco Móvil</string>
    <string name="bienvenidoABancoMovil">¡BIENVENIDO A BANCO MÓVIL!</string>
    <string name="iniciarSesion">Iniciar Sesión</string>
    <string name="crearCuenta">Crear cuenta</string>
    <string name="todo">TODO</string>
    <string name="title_activity_iniciar_sesion">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="usuario">Usuario</string>
    <string name="olvidaste_tu_contrasenia">¿Olvidaste tu contraseña?</string>
    <string name="btn_iniciar_sesion">Iniciar Sesión</string>
    <string name="password">Password</string>
    <string name="agregar_saldo">Agregar saldo</string>
    <string name="realizar_transferencia">Realizar transferencia</string>
    <string name="turnos">Turnos</string>
    <string name="ultimos_movimientos">Últimos movimientos</string>
    <string name="administrador_de_servicios">Administrador de servicios</string>
    <string name="saldo">Saldo</string>
    <string name="simboloPesos">$</string>
    <string name="cuenta_origen">Cuenta origen</string>
    <string name="cancelar">Cancelar</string>
    <string name="observaciones">Observaciones</string>
    <string name="fecha">Fecha</string>
    <string name="monto">Monto</string>
    <string name="cuenta_destino">Cuenta destino</string>
    <string name="reingrese_contrase_a">Reingrese contraseña</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="domicilio">Domicilio</string>
    <string name="n_mero_de_tarjeta">Número de tarjeta</string>
    <string name="email">Email</string>

    <string name="canal_estado_nombre">canal_estado_nombre</string>
    <string name="canal_estado_descr">canal_estado_descr</string>
    <string name="dias_de_plazo">10 días de plazo</string>
    <string name="intereses">Intereses:</string>
    <string name="aceptar_terminos_y_condiciones">Aceptar términos y condiciones</string>
    <string name="hacer_plazo_fijo">Hacer plazo fijo</string>
    <string name="informacion_de_control">Información de control</string>
    <string name="acreditar_en_cuenta">Acreditar en cuenta</string>
    <string name="renovacion_automatica">Renovación automatica</string>
    <string name="moneda">Moneda</string>
    <string name="usd">USD</string>
    <string name="ars">ARS</string>
    <string name="dias">Dias:</string>
    <string name="togglebutton">togglebutton</string>
    <string name="montoAdminServicios">Monto:</string>
    <string name="fecha_fin">Fecha fin:</string>
    <string name="rendimiento">Rendimiento:</string>
    <string name="renovacion_automatica_plazo_fijo">Renovacion automática</string>
    <string name="monto_TextView">Monto</string>
    <string name="title_activity_buscar_sucursal">Map</string>
    <string name="verturnos">VerTurnos</string>
    <string name="solicitar_turnos">Solicitar Trno</string>
    <string name="administrador_de_turnos">Administrador de turnos</string>
</resources>
