<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CrearCuenta">

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <TextView
        android:id="@+id/textViewRealizarTransferencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/realizar_transferencia"
        android:textAppearance="@style/TextAppearance.AppCompat.Button" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="21dp" />

    <TextView
        android:id="@+id/textViewCuentaOrigen"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:text="@string/cuenta_origen" />

    <EditText
        android:id="@+id/cuentaOrigen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:inputType="number" />

    <TextView
        android:id="@+id/textViewCuentaDestino"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:text="@string/cuenta_destino" />

    <EditText
        android:id="@+id/cuentaDestino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number|textEmailAddress" />

    <TextView
        android:id="@+id/textViewMontoTransferencia"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:text="@string/monto" />

    <EditText
        android:id="@+id/montoTransferencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number|numberDecimal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewFecha"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:text="@string/fecha" />

        <EditText
            android:id="@+id/fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date|textPostalAddress" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewObservaciones"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:text="@string/observaciones" />

    <EditText
        android:id="@+id/observaciones"
        android:layout_width="match_parent"
        android:layout_height="117dp"
        android:ems="10"
        android:inputType="textLongMessage|textImeMultiLine" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelar"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:text="@string/cancelar" />

        <Button
            android:id="@+id/realizarTransferencia"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Realizar transferencia" />
    </LinearLayout>

</LinearLayout>
