<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".IniciarSesion">

    <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="273dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="72dp"
                android:layout_marginEnd="8dp"
                android:adjustViewBounds="false"
                android:contentDescription="@string/todo"
                android:cropToPadding="false"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textViewUsuario"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:text="Usuario" />

    <EditText
        android:id="@+id/usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />

    <TextView
                android:id="@+id/textViewPassword"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:text="@string/password" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="84dp" />

    <Button
        android:id="@+id/btn_iniciarSesion"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:text="Iniciar sesion" />

            <Button
                android:id="@+id/olvidasteContrasenia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/olvidaste_tu_contrasenia" />

</LinearLayout>